fixed models, template changes, view improvements + some additions - too much for one commit

--- a/commerce/auctions/templates/auctions/index.html
+++ b/commerce/auctions/templates/auctions/index.html
@@ -1,7 +1,33 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-    <h2>Active Listings</h2>
+	<h2>Active Listings</h2>
 
-    TODO
+
+	<br /><br />
+	{% for auction in auctions %}
+		<div class="bg-dark mr-md-2 pt-2 px-1 pt-md-1 px-md-1 text-center text-white overflow-hidden">
+			<div class="my-3 py-3">
+				<h2 class="display-2">Listing: {{ auction.listing_name }}</h2>
+			</div>
+		</div>
+				
+		<br /><br />
+		<img src="{{ auction.image_path }}"/>
+		<br /><br />
+
+		<div class="container-fluid">	
+			{{ auction.listing_detail }}
+			<div class="bg-dark my-3 py-3"></div>		
+			<h4 class="display-5">Seller: {{ auction.user.username }} {{ auction.user.email }}<h4>
+			<h3>Minimum Bid: {{ auction.listing_price }} </h3>
+			<h4>Ends: {{ auction.end_date }}</h4>
+			{{ auction.listing_category }}
+			<br /><br />
+		</div>
+		<br /><br />
+		<div class="bg-dark my-1 py-1 text-center text-white">--------------------------------------------------------------------------------</div>		
+		<br /><br />
+    {% endfor %}
+   
 {% endblock %}
