--- a/commerce/auctions/templates/auctions/layout.html
+++ b/commerce/auctions/templates/auctions/layout.html
@@ -30,6 +30,9 @@
 				<li class="nav-item">
                     <a class="nav-link" href="{% url 'create_listing' %}">Create Listing</a>
                 </li>
+				<li class="nav-item">
+                    <a class="nav-link" href="{% url 'won_view' %}">Auction won</a>
+                </li>
 				
             {% else %}
                 <li class="nav-item">
